<resources>
    <string name="app_name">CompanyDB</string>
    <string name="add_btn">Add</string>
    <string name="search_btn">Search</string>
    <string name="update_btn">Update</string>
    <string name="sort_btn">Sort</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_position">Position</string>
    <string name="hint_id">Id</string>
    <string name="updateitem_btn">Edit</string>
    <string name="upload_btn">Upload</string>
    <string name="delete_btn">Delete</string>
    <string name="all_users_btn">All Users</string>
    <string name="clear_all">Clear All</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
</resources>
