<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <Button android:id="@+id/AddBtn" android:text="@string/add_btn"
            android:layout_height="75dp" android:layout_width="129dp"/>
    <Button android:id="@+id/SearchBtn" android:layout_row="1" android:layout_column="0"
            android:text="@string/search_btn" android:layout_width="129dp" android:layout_height="75dp"
            android:layout_below="@id/AddBtn"/>
    <Button android:id="@+id/AllUsersBtn" android:layout_row="2" android:layout_column="0"
            android:layout_height="75dp" android:layout_width="129dp" android:text="@string/all_users_btn"
            android:layout_below="@id/SearchBtn"/>
    <Button android:id="@+id/SortBtn" android:layout_row="3" android:layout_column="0"
            android:text="@string/sort_btn" android:layout_width="129dp" android:layout_height="75dp"
            android:layout_below="@id/AllUsersBtn"/>


</RelativeLayout>
